resolve errors when use stream-chat-android as submodule
- remove lines which are related with publishing module
- change rootDir -> rootDir/stream-chat-android

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import io.getstream.chat.android.command.release.plugin.ReleasePlugin
 import io.getstream.chat.android.command.unittest.plugin.UnitTestsPlugin
 
 apply plugin: "com.github.ben-manes.versions"
-apply plugin: 'io.github.gradle-nexus.publish-plugin'
+// apply plugin: 'io.github.gradle-nexus.publish-plugin'
 apply plugin: 'binary-compatibility-validator'
 apply plugin: 'org.jetbrains.dokka'
 apply from: "${rootDir}/scripts/sample-app-versioner.gradle"
@@ -79,22 +79,22 @@ dependencyUpdates {
     }
 }
 
-apiValidation {
-    ignoredPackages += [
-            'com/getstream/sdk/chat/databinding',
-            'io/getstream/chat/android/ui/databinding',
-    ]
-
-    ignoredProjects += [
-            'stream-chat-android-docs',
-            'stream-chat-android-ui-components-sample',
-            'stream-chat-android-test',
-            'stream-chat-android-compose-sample',
-    ]
-
-    nonPublicMarkers += [
-            'io.getstream.chat.android.core.internal.InternalStreamChatApi',
-    ]
-}
-
-apply from: "${rootDir}/scripts/publish-root.gradle"
+//apiValidation {
+//    ignoredPackages += [
+//            'com/getstream/sdk/chat/databinding',
+//            'io/getstream/chat/android/ui/databinding',
+//    ]
+//
+//    ignoredProjects += [
+//            'stream-chat-android-docs',
+//            'stream-chat-android-ui-components-sample',
+//            'stream-chat-android-test',
+//            'stream-chat-android-compose-sample',
+//    ]
+//
+//    nonPublicMarkers += [
+//            'io.getstream.chat.android.core.internal.InternalStreamChatApi',
+//    ]
+//}
+//
+// apply from: "${rootDir}/scripts/publish-root.gradle"
