--- a/stream-chat-android-compose-sample/build.gradle
+++ b/stream-chat-android-compose-sample/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
-apply from: "${rootDir}/scripts/android.gradle"
+apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
 
 android {
     defaultConfig {
