--- a/stream-chat-android-compose/build.gradle
+++ b/stream-chat-android-compose/build.gradle
@@ -1,4 +1,3 @@
-import io.getstream.chat.android.Configuration
 import io.getstream.chat.android.Dependencies
 import io.getstream.chat.android.Versions
 
@@ -6,18 +5,18 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 
-ext {
-    PUBLISH_GROUP_ID = Configuration.artifactGroup
-    if (snapshot) {
-        PUBLISH_VERSION = Configuration.snapshotVersionName
-    } else {
-        PUBLISH_VERSION = Configuration.versionName + "-beta"
-    }
-    PUBLISH_ARTIFACT_ID = 'stream-chat-android-compose'
-}
-
-apply from: "${rootDir}/scripts/publish-module.gradle"
-apply from: "${rootDir}/scripts/android.gradle"
+//ext {
+//    PUBLISH_GROUP_ID = Configuration.artifactGroup
+//    if (snapshot) {
+//        PUBLISH_VERSION = Configuration.snapshotVersionName
+//    } else {
+//        PUBLISH_VERSION = Configuration.versionName + "-beta"
+//    }
+//    PUBLISH_ARTIFACT_ID = 'stream-chat-android-compose'
+//}
+//
+//apply from: "${rootDir}/scripts/publish-module.gradle"
+apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
 
 android {
     defaultConfig {
