--- a/stream-chat-android-core/build.gradle
+++ b/stream-chat-android-core/build.gradle
@@ -1,4 +1,3 @@
-import io.getstream.chat.android.Configuration
 import io.getstream.chat.android.Dependencies
 
 plugins {
@@ -7,13 +6,13 @@ plugins {
 }
 
 
-ext {
-    PUBLISH_GROUP_ID = Configuration.artifactGroup
-    PUBLISH_ARTIFACT_ID = 'stream-chat-android-core'
-    PUBLISH_VERSION = rootVersionName
-}
-
-apply from: "${rootDir}/scripts/publish-module.gradle"
+//ext {
+//    PUBLISH_GROUP_ID = Configuration.artifactGroup
+//    PUBLISH_ARTIFACT_ID = 'stream-chat-android-core'
+//    PUBLISH_VERSION = rootVersionName
+//}
+//
+//apply from: "${rootDir}/scripts/publish-module.gradle"
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
@@ -22,8 +21,8 @@ java {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
         freeCompilerArgs += [
-                '-progressive',
-                '-Xexplicit-api=strict',
+            '-progressive',
+            '-Xexplicit-api=strict',
                 '-Xopt-in=kotlin.RequiresOptIn',
                 '-Xopt-in=io.getstream.chat.android.core.internal.InternalStreamChatApi',
         ]
