--- a/stream-chat-android-docs/build.gradle
+++ b/stream-chat-android-docs/build.gradle
@@ -3,7 +3,7 @@ import io.getstream.chat.android.Dependencies
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
-apply from: "${rootDir}/scripts/android.gradle"
+apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
 
 android {
     defaultConfig {
