resolve errors when use stream-chat-android as submodule
- remove lines which are related with publishing module
- change rootDir -> rootDir/stream-chat-android

--- a/stream-chat-android-compose-sample/build.gradle
+++ b/stream-chat-android-compose-sample/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
-apply from: "${rootDir}/scripts/android.gradle"
-apply from: "${rootDir}/scripts/detekt-compose.gradle"
+apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
+apply from: "${rootDir}/stream-chat-android/scripts/detekt-compose.gradle"
 
 android {
     defaultConfig {
