--- a/stream-chat-android-test/build.gradle
+++ b/stream-chat-android-test/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
-apply from: "${rootDir}/stream-chat-android/scripts/detekt-test.gradle"
+// apply from: "${rootDir}/stream-chat-android/scripts/detekt-test.gradle"
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
