--- a/stream-chat-android-compose-sample/build.gradle
+++ b/stream-chat-android-compose-sample/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
-apply from: "${rootDir}/stream-chat-android/scripts/detekt-compose.gradle"
+// apply from: "${rootDir}/stream-chat-android/scripts/detekt-compose.gradle"
 
 android {
     defaultConfig {
