--- a/stream-chat-android-docs/build.gradle
+++ b/stream-chat-android-docs/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
-apply from: "${rootDir}/stream-chat-android/scripts/detekt-disabled.gradle"
+// apply from: "${rootDir}/stream-chat-android/scripts/detekt-disabled.gradle"
 
 android {
     defaultConfig {
