missing lines : change rootDir -> rootDir/stream-chat-android

--- a/libraries/logging/stream-logger-android/build.gradle
+++ b/libraries/logging/stream-logger-android/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'de.mannodermaus.android-junit5'
 //}
 //
 //apply from: "${rootDir}/scripts/publish-module.gradle"
-apply from: "${rootDir}/scripts/android.gradle"
+apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
 
 android {
     defaultConfig {
