--- a/stream-chat-android-ui-uitests/build.gradle
+++ b/stream-chat-android-ui-uitests/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'shot'
 }
 
-apply from: "${rootDir}/scripts/android.gradle"
+apply from: "${rootDir}/stream-chat-android/scripts/android.gradle"
 
 android {
     defaultConfig {
